--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../config/typescript/base.json",
   "compilerOptions": {
     "lib": ["ES2022"],
-    "outDir": "./dist",
-    "rootDir": "./src"
+    "outDir": "./dist"
   },
   "include": ["src/**/*", "prisma/**/*"],
   "exclude": ["node_modules", "dist"]
