--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -5,6 +5,7 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "scripts": {
+    "build": "tsc",
     "generate": "prisma generate",
     "migrate": "prisma migrate dev",
     "migrate:dev": "prisma migrate dev",
