--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
-  "buildCommand": "pnpm turbo run build --filter=@valore/web",
+  "buildCommand": "cd packages/database && pnpm prisma generate && cd ../.. && pnpm turbo run build --filter=@valore/web",
   "installCommand": "pnpm install",
-  "ignoreCommand": "git diff HEAD^ HEAD --quiet ."
+  "ignoreCommand": "git diff HEAD^ HEAD --quiet .",
+  "framework": "nextjs",
+  "outputDirectory": "apps/web/.next"
 }
